- перерброска пакетов кораблей в собственные package - ship - правка event bus, теперь оно может удалять по группам - события на которые зарегистрированно - дополнение к эффектам, модфикация через xml - новые события - доработка талантов паладина - внедрение системы талантов и ее привязка к action use